--- a/src/pages/groupDisplay/groupDisplay.css
+++ b/src/pages/groupDisplay/groupDisplay.css
@@ -6,14 +6,41 @@
 
     /* display: flex; */
     /* flex-flow: row nowrap; */
-
     /* position: relative; */
+    background: radial-gradient(circle, #929292 0%, #707070 40%, #0a0a0a 100%);
+
     
 }
+.groupDisplay::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:
+        /* Combine layers */
+        /* linear-gradient(120deg, rgba(255, 0, 150, 0.25) 20%, rgba(0, 200, 255, 0.25) 60%), */
+        /* linear-gradient(120deg, rgba(13, 0, 255, 0.25) 20%, rgba(255, 255, 0, 0.25) 60%), */
+        url('../../images/texture.png');
+    /* background-position: center; */
+    background-size: cover;
+    /* Blend gradient and texture */
+    background-blend-mode: overlay, normal;
+    /* Blend with the underlying content */
+    mix-blend-mode: overlay;
+    pointer-events: none;
+    /* non-interactive */
+    opacity: 0.5;
+}
+
 
 .scrollDisplay {
     border: 2px solid magenta;
-    height: 500dvh;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -21,7 +48,7 @@
     border: 2px solid gold;
     width: 100%;
     height: 20dvh;
-    height: 100dvh;
+    height: 15dvh;
     position: sticky;
     top: 0;
 }
@@ -29,8 +56,8 @@
 
 .artImage {
     border: 2px solid green;
-    width: 100%;
-    height: 25dvh;
+    width: 30dvh;
+    height: 30dvh;
     display: flex;
     justify-content: center;
     align-items: center;
