--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -1,8 +1,12 @@
 .galleryPage {
+
+    /* custom variables for after shading */
+    --color-shadeOne: #c90000;
+
     border: 2px solid blue;
     /* background-color: rgb(18, 18, 18); */
     /* background: radial-gradient(circle, rgb(30, 30, 30) 0%, rgb(20, 20, 20) 40%, rgb(10, 10, 10) 100%); */
-    background: radial-gradient(circle, rgb(146, 146, 146) 0%, rgb(112, 112, 112) 40%, rgb(10, 10, 10) 100%);
+    background: radial-gradient(circle, #929292 0%, #707070 40%, #0a0a0a 100%);
     width: 100dvw;
     height: 100dvh;
     display: flex;
@@ -15,18 +19,27 @@
     /* perspective: 1000px; */
 }
 
-.galleryPage::after {
+.galleryBackground {
+    --color-shadeOne: #c90000;
+    background: radial-gradient(circle, #929292 0%, #707070 40%, #0a0a0a 100%);
+
+}
+.galleryBackground::after {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background:
-        /* Combine layers */
-        /* linear-gradient(120deg, rgba(255, 0, 150, 0.25) 20%, rgba(0, 200, 255, 0.25) 60%), */
-        linear-gradient(120deg, rgba(13, 0, 255, 0.25) 20%, rgba(255, 255, 0, 0.25) 60%),
-        url('../../images/texture.png');
+    /* ! unable to transition gradients */
+    /* background-image:
+        linear-gradient(120deg, var(--color-shadeOne) 20%, var(--color-shadeTwo) 60%),
+        url('../../images/texture.png'); */
+    /* settled for solid color */
+    background-color: var(--color-shadeOne);
+    background-image: url('../../images/texture.png');
+
+
     /* background-position: center; */
     background-size: cover;
     /* Blend gradient and texture */
@@ -36,7 +49,37 @@
     pointer-events: none;
     /* non-interactive */
     opacity: 0.5;
+    transition: background-color 0.75s ease-in-out;
+
 }
+
+.galleryPage::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* ! unable to transition gradients */
+    /* background-image:
+        linear-gradient(120deg, var(--color-shadeOne) 20%, var(--color-shadeTwo) 60%),
+        url('../../images/texture.png'); */
+    /* settled for solid color */
+    background-color: var(--color-shadeOne);
+    background-image: url('../../images/texture.png');
+    /* background-position: center; */
+    background-size: cover;
+    /* Blend gradient and texture */
+    background-blend-mode: overlay, normal;
+    /* Blend with the underlying content */
+    mix-blend-mode: overlay;
+    pointer-events: none;
+    /* non-interactive */
+    opacity: 0.5;
+    transition: background-color 0.75s ease-in-out;
+}
+
+
 
 
 .displayIcon {
