--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -171,4 +171,35 @@
 
 .menuSection {
     border: 2px solid lime;
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    
+}
+
+.sectionItems,
+.displayItems {
+    border: 2px solid white;
+    /* flex: 1; */
+    width: 40%;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+
+}
+
+.menuButton {
+    border: 2px solid gold;
+    width: 75%;
+    height: 20%;
+    
 }
