--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ html {
   align-items: center;
 }
 
-.glassMorph {
+.glassMorphGreen {
   /* Glass morph */
   background-color: transparent;
   backdrop-filter: blur(3px);
@@ -47,7 +47,7 @@ html {
       #b6f80155);
 }
 
-.clearGlass {
+.glassMorphClear {
   /* Glass morph */
   background-color: transparent;
   backdrop-filter: blur(2px);
@@ -59,5 +59,25 @@ html {
       #ffffff33,
       #80808033,
       #ffffff33);
+}
+
+.glassMorphBlack,
+.glassMorphWhite {
+  transition: background-color 0.5s ease, color 0.5s ease, border 0.5s ease;
+}
+.glassMorphWhite {
+  background-color: transparent;
+  backdrop-filter: blur(2px);
+  background-color: #ffffff77;
+  color: black;
+  border: 1px solid white;
+}
+
+.glassMorphBlack {
+  background-color: transparent;
+  backdrop-filter: blur(2px);
+  background-color: #00000077;
+  color: white;
+  border: 1px solid gold;
 }
 
