--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -171,35 +171,32 @@
 
 .menuSection {
     border: 2px solid lime;
-    height: 100%;
+    height: 65%;
     width: 100%;
 
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 10px;
-
-    
 }
 
 .sectionItems,
 .displayItems {
     border: 2px solid white;
-    /* flex: 1; */
     width: 40%;
-
+    height: 100%;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    height: 50%;
-
+    gap: 10px;
 }
 
 .menuButton {
-    border: 2px solid gold;
-    width: 75%;
-    height: 20%;
-    
+    /* border: 2px solid white; */
+    border-radius: 5px;
+    width: 85%;
+    height: 10dvh;
+    font-size: 2.75dvw;
 }
