--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -57,7 +57,7 @@
 }
 
 .sectionButtons {
-    border: 2px solid blue;
+    border: 2px solid orange;
     flex: 1;
     width: 100%;
     height: 100%;
