--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -47,20 +47,9 @@
 }
 
 
-.displayIcon {
-    border: 2px solid white;
-    width: 45dvh;
-    height: 45dvh;
-    position: absolute;
-    top: -5%;
-    left: -70px;
-}
-
 .sectionButtons {
-    border: 2px solid orange;
-    flex: 1;
-    width: 100%;
-    height: 100%;
+    border: 2px solid green;
+    /* flex: 1; */
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
@@ -82,26 +71,64 @@
 }
 
 
+.galleryInfoExpansion {
+    border: 2px solid white;
+    width: 90%;
+    height: 95%;
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.bigImageSlider {
+    /* border: 2px solid red; */
+    flex: 0;
+}
+.bigImage {
+    border: 2px solid grey;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.galleryControlPanel {
+    border: 2px solid purple;
+    /* flex: 0 0 50%; */
+    flex: 1;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.displayIcon {
+    border: 2px solid white;
+    width: 45dvh;
+    height: 45dvh;
+    position: absolute;
+    top: -10%;
+    left: -20%;
+}
 
 .galleryInformation {
-    border: 2px solid red;
-    flex: 7;
+    border: 2px solid pink;
+    flex: 1;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0) 80%);
     /* overflow: hidden; */
     /* box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5); */
-    width: 90%;
+    width: 95%;
     max-width: 510px;
 
     position: relative;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-end;
-
     z-index: 10;
 }
 
 .displayContent {
-    /* border: 2px solid lime; */
+    border: 2px solid lime;
     width: 100%;
     height: 80%;
     display: flex;
@@ -118,14 +145,14 @@
     height: 30dvh;
     object-fit: contain;
     position: absolute;
-    top: 5%;
-    left: 5%;
+    top: 0%;
+    left: 0%;
     filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.75));
 }
 
 .displayTitle {
     border: 2px solid gold;
-    font-size: 10dvw;
+    font-size: 20px;
     font-weight: 700;
     z-index: 5;
 }
@@ -154,8 +181,8 @@
 
 .galleryButton {
     /* Glass morph */
-    background-color: transparent;
     /* backdrop-filter: blur(3px); */
+    background-color: transparent;
     background-image: linear-gradient(120deg,
             #6e6e6e66,
             #ffffff66,
@@ -175,7 +202,6 @@
     border: 2px solid lime;
     height: 65%;
     width: 100%;
-
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
@@ -202,3 +228,24 @@
     height: 10dvh;
     font-size: 2.75dvw;
 }
+
+
+
+/* screens greater than 430 */
+
+@media (min-width: 430px) {
+
+    .galleryPage {
+        border: 2px solid magenta;
+    }
+
+
+    .bigImageSlider {
+        /* border: 2px solid red; */
+        flex: 1;
+    }    
+
+
+
+}
+
