--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -1,11 +1,8 @@
 .galleryPage {
-
     /* custom variables for after shading */
     --color-shadeOne: #9300c9;
 
     border: 2px solid blue;
-    /* background-color: rgb(18, 18, 18); */
-    /* background: radial-gradient(circle, rgb(30, 30, 30) 0%, rgb(20, 20, 20) 40%, rgb(10, 10, 10) 100%); */
     background: radial-gradient(circle, #929292 0%, #707070 40%, #0a0a0a 100%);
     width: 100dvw;
     height: 100dvh;
@@ -16,7 +13,6 @@
     position: relative;
     overflow: hidden;
     padding: 2dvh 0dvw;
-    /* perspective: 1000px; */
 }
 
 .galleryPage::after {
@@ -46,55 +42,27 @@
     transition: background-color 0.75s ease-in-out;
 }
 
-
-.sectionButtons {
-    border: 2px solid green;
-    /* flex: 1; */
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.displayButtons {
-    border: 2px solid gold;
-    position: absolute;
-    top: 6%;
-    right: 5%;
-    width: 25%;
-    height: 25%;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    z-index: 90;
-}
-
-
-.galleryInfoExpansion {
-    border: 2px solid white;
-    width: 90%;
-    height: 95%;
-    display: flex;
-    flex-flow: row nowrap;
-}
-
 .bigImageSlider {
     /* border: 2px solid red; */
+    display: none;
     flex: 0;
 }
+
 .bigImage {
-    border: 2px solid grey;
+    display: none;
+    /* border: 2px solid grey;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover; */
 }
 
-.galleryControlPanel {
+.galleryVeiwControl {
     border: 2px solid purple;
-    /* flex: 0 0 50%; */
+    height: 100%;
+    width: 100%;
+    min-width: 375px;
+    max-width: 430px;
     flex: 1;
-
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -111,15 +79,22 @@
     left: -20%;
 }
 
-.galleryInformation {
+.sectionButtons {
+    border: 2px solid goldenrod;
+    width: 100%;
+    height: 15dvh;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.contentContainer {
     border: 2px solid pink;
     flex: 1;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0) 80%);
-    /* overflow: hidden; */
-    /* box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5); */
     width: 95%;
-    max-width: 510px;
-
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0) 80%);
+    /* box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5); */
     position: relative;
     display: flex;
     flex-flow: column nowrap;
@@ -127,17 +102,30 @@
     z-index: 10;
 }
 
-.displayContent {
-    border: 2px solid lime;
-    width: 100%;
-    height: 80%;
+.displayButtons {
+    border: 2px solid gold;
+    position: absolute;
+    top: 10%;
+    right: 5%;
+    width: 25%;
+    height: 32%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    gap: 15px;
+    z-index: 90;
 }
 
+.displayContent {
+    border: 2px solid lime;
+    width: 100%;
+    height: 55%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
 
 .displayImage {
     border: 2px solid lime;
@@ -145,39 +133,33 @@
     height: 30dvh;
     object-fit: contain;
     position: absolute;
-    top: 0%;
-    left: 0%;
+    top: 3%;
+    left: 3%;
     filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.75));
 }
 
 .displayTitle {
     border: 2px solid gold;
-    font-size: 20px;
+    width: 85%;
+    font-size: 5dvh;
     font-weight: 700;
     z-index: 5;
+    text-align: center;
 }
 
 .displayLine {
     border: 1px solid black;
-    width: 95%;
+    width: 90%;
     z-index: 5;
 }
 
 .displayDescription {
     border: 2px solid gold;
-    height: 20%;
-    width: 90%;
+    /* height: 20%; */
+    width: 80%;
     text-align: center;
     z-index: 5;
 }
-
-
-.noDisplay {
-    display: none;
-}
-
-
-
 
 .galleryButton {
     /* Glass morph */
@@ -194,7 +176,15 @@
     border-radius: 4px;
     border: 1px solid #ffffff88;
     cursor: pointer;
+    position: absolute;
+    bottom: 5%;
 }
+
+
+
+
+
+
 
 /* menu Section */
 
@@ -236,15 +226,37 @@
 @media (min-width: 430px) {
 
     .galleryPage {
+        /* custom variables for after shading */
+        --color-shadeOne: #9300c9;
+    
         border: 2px solid magenta;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        overflow: hidden;
+        padding: 2dvh 0dvw;
     }
-
+    
 
     .bigImageSlider {
-        /* border: 2px solid red; */
+        border: 2px solid red;
+        /* display: none; */
+        display: flex;
         flex: 1;
-    }    
-
+        height: 100%;
+    }
+    
+    .bigImage {
+        /* border: 2px solid yellow; */
+        /* display: none; */
+        display: flex;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
 
 
 }
