--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -3,29 +3,28 @@
     width: 100dvw;
     height: 100dvh;
     display: block;
-    overflow-y: scroll;
     position: relative;
+    overflow-y: auto;
 }
 
 .homeScrollDiv {
     border: 2px solid goldenrod;
-    position: relative;
-    /* overflow: hidden; */
-    /* height: 4000px; */
+    /* position: relative; */
 }
 
 .homeImageDisplay {
-    /* border: 2px solid orangered; */
+    border: 2px solid orangered;
     width: 100%;
     height: 100dvh;
     position: fixed;
     top: 0;
     left: 0;
+    pointer-events: none;
 }
 
 
 .homeSection {
-    /* border: 2px solid greenyellow; */
+    border: 2px solid greenyellow;
     width: 100%;
     position: sticky;
     top: 0%;
