--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -28,7 +28,8 @@
     width: 100%;
     position: sticky;
     top: 0%;
-    /* background-color: black; */
+    background-color: white;
+    /* color: white; */
 }
 
 
@@ -36,16 +37,20 @@
     height: 65dvh;
     top: 35dvh;
     margin-top: 100dvh;
+    /* background: linear-gradient(150deg, #560000, #979700); */
 }
 
 .homeSection:nth-child(2) {
     height: 60dvh;
     top: 40dvh;
+    /* background: linear-gradient(150deg, #073d00, #a2b000); */
+
 }
 
 .homeSection:nth-child(3) {
     height: 55dvh;
     top: 45dvh;
+    /* background: linear-gradient(150deg, #050066, #510062); */
 }
 
 .homeSection:nth-child(4) {
@@ -58,6 +63,78 @@
     top: 55dvh;
 }
 
+.homeContent {
+    border: 2px solid blue;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+
+}
+
+.contentTitle {
+    /* border: 2px solid magenta; */
+}
+
+
+.contentDisplay {
+    border: 2px solid red;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+
+    position: relative;
+
+}
+
+
+
+.contentCoolScene {
+    border: 2px solid purple;
+    /* display: none; */
+    flex: 1;
+}
+
+.contentCoolMini {
+    border: 2px solid grey;
+    border-radius: 50%;
+
+    width: 20dvh;
+    height: 20dvh;
+
+    /* position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+
+    float: left;
+    shape-outside: circle(50%);
+    clip-path: circle(50%);
+
+    background-color: transparent;
+    backdrop-filter: blur(2px);
+    background-image: linear-gradient(90deg,
+        #ffffff33,
+        #80808033,
+        #ffffff33);
+}
+
+.contentDescription {
+    border: 2px solid gold;
+    display: block;
+    flex-flow: row nowrap;
+    width: 50%;
+}
+
+.contentDescription p {
+    /* margin: 10px; */
+    padding: 1rem;
+    line-height: 1.5;
+    text-align: justify;
+}
 
 
 
@@ -71,19 +148,6 @@
 
 
 
-
-
-
-/* .homeDisplay {
-    height: 100dvh;
-    width: 100%;
-    position: sticky;
-    top: 0;
-    overflow: hidden;
-    z-index: 5;
-} */
-
-
 .homeTextStyle {
     color: #e5e5e5;
     z-index: 10;
@@ -93,8 +157,6 @@
     letter-spacing: 3px;
     display: flex;
     flex-flow: column nowrap;
-    /* justify-content: center; */
-    /* align-items: center; */
     text-shadow:
         1px 1px 2px rgba(0, 0, 0, 0.8),
         2px 2px 5px rgba(0, 0, 0, 0.7),
@@ -116,78 +178,12 @@
     word-wrap: break-word;
 }
 
-/* .scrollAdventure {
+.scrollAdventure {
     height: 20%;
     width: 75%;
     font-size: 6vw;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%) rotateX(15deg) rotateY(-10deg);
-} */
+}
 
-/* .tinyFigures {
-    font-family: wildGrowth;
-    height: 15%;
-    width: 95%;
-    font-size: 10vw;
-    top: 30%;
-    left: 0%;
-} */
-
-/* .epicStories {
-    height: 15%;
-    width: 95%;
-    font-size: 10vw;
-    top: 38%;
-    left: 15%;
-} */
-
-/* .miniImage {
-    position: absolute;
-    top: 0;
-    left: 0;
-    object-fit: contain;
-    filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.75));
-} */
-
-/* .landscapeImage {
-    border-radius: 10px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-    box-shadow: 3px 3px 15px 5px black;
-} */
-
-/* .homeMenu {
-    height: 100dvh;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding-top: 15dvh;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    gap: 20px;
-} */
-
-/* .menuBanner {
-    height: 12%;
-    white-space: nowrap;
-    margin-left: -10px;
-    overflow: hidden;
-    transform: rotateX(15deg) rotateY(-10deg);
-    z-index: 10;
-} */
-
-/* .bannerText {
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
-    font-family: wildGrowth;
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
-    font-size: 7.5dvw;
-    padding: 0px 0px 6px 10px;
-} */
