changed home page

--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -12,6 +12,88 @@
     /* position: relative; */
 }
 
+.revealPanel {
+    border: 2px solid magenta;
+    width: 100%;
+    height: 100dvh;
+    position: relative;
+    z-index: 10;
+}
+
+.homeImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+}
+
+.stickyFooter {
+    border: 2px solid lime;
+    height: 70dvh;
+    width: 100%;
+    position: sticky;
+    bottom: 0;
+
+
+    background-color: black;
+    /* background: linear-gradient(150deg, #052900, #737900); */
+    color: white;
+    background-image: 
+    linear-gradient(150deg, #052900ee, #737900ee), /* Gradient layer */
+    url('../../images/texture1.png'); 
+    background-size: cover, cover;
+    background-repeat: no-repeat, no-repeat;
+    background-position: center, center;
+    /* background-color: #0000ff99; */
+    /* background-blend-mode: overlay; */
+
+}
+
+
+.homeTextStyle {
+    color: #e5e5e5;
+    z-index: 10;
+    position: absolute;
+    text-align: center;
+    font-weight: 700;
+    letter-spacing: 3px;
+    display: flex;
+    flex-flow: column nowrap;
+    text-shadow:
+        1px 1px 2px rgba(0, 0, 0, 0.8),
+        2px 2px 5px rgba(0, 0, 0, 0.7),
+        3px 3px 8px rgba(0, 0, 0, 0.6),
+        4px 4px 11px rgba(0, 0, 0, 0.5),
+        5px 5px 14px rgba(0, 0, 0, 0.4);
+    z-index: 20;
+}
+
+.SStitle {
+    border: 4px solid white;
+    font-family: wildGrowth;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotateX(18deg) rotateY(-10deg);
+    width: 105%;
+    height: 10dvh;
+    font-size: 6vw;
+    padding: 0 0 8dvh 8dvw;
+    word-wrap: break-word;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .homeImageDisplay {
     border: 2px solid orangered;
     width: 100%;
@@ -23,15 +105,29 @@
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .homeSection {
-    border: 2px solid greenyellow;
+    border: 2px solid orange;
     width: 100%;
     position: sticky;
     top: 0%;
     background-color: black;
     /* background: linear-gradient(150deg, #052900, #737900); */
     color: white;
-
 
     background-image: 
     linear-gradient(150deg, #052900ee, #737900ee), /* Gradient layer */
@@ -165,44 +261,9 @@
 
 
 
-.homeImage {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 0;
-}
 
 
 
-.homeTextStyle {
-    color: #e5e5e5;
-    z-index: 10;
-    position: absolute;
-    text-align: center;
-    font-weight: 700;
-    letter-spacing: 3px;
-    display: flex;
-    flex-flow: column nowrap;
-    text-shadow:
-        1px 1px 2px rgba(0, 0, 0, 0.8),
-        2px 2px 5px rgba(0, 0, 0, 0.7),
-        3px 3px 8px rgba(0, 0, 0, 0.6),
-        4px 4px 11px rgba(0, 0, 0, 0.5),
-        5px 5px 14px rgba(0, 0, 0, 0.4);
-}
-
-.SStitle {
-    border: 4px solid white;
-    font-family: wildGrowth;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotateX(18deg) rotateY(-10deg);
-    width: 105%;
-    height: 10dvh;
-    font-size: 6vw;
-    padding: 0 0 8dvh 8dvw;
-    word-wrap: break-word;
-}
 
 .scrollAdventure {
     height: 20%;
