--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -33,21 +33,74 @@
     width: 100%;
     position: sticky;
     bottom: 0;
+    padding: 2rem;
+
+
+    display: flex;
+    flex-flow: column-reverse nowrap;
+    justify-content: center;
+    align-items: flex-start;
 
 
     background-color: black;
     /* background: linear-gradient(150deg, #052900, #737900); */
     color: white;
     background-image: 
-    linear-gradient(150deg, #052900ee, #737900ee), /* Gradient layer */
-    url('../../images/texture1.png'); 
-    background-size: cover, cover;
+    linear-gradient(150deg, #052900aa, #737900aa), /* Gradient layer */
+    url('../../images/mordor.png'); 
+    background-size: contain, contain;
     background-repeat: no-repeat, no-repeat;
-    background-position: center, center;
-    /* background-color: #0000ff99; */
-    /* background-blend-mode: overlay; */
+    background-position: center, bottom;
 
 }
+
+.footerContent {
+    border: 2px solid yellow;
+    flex: 1;
+    width: 60%;
+
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.footerLinks,
+.footerAbout {
+    border: 2px solid grey;
+    font-family: ringbearer;
+    font-size: 26px;
+    letter-spacing: 3px;
+    height: 100%;
+    width: 100%;
+    flex: 1;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    /* justify-content: center; */
+    align-items: center;
+    gap: 8px;
+
+}
+
+.footerViews {
+    border: 2px solid purple;
+    flex: 1;
+}
+
+
+
+.SSwelcome {
+    font-family: ringbearer;
+    border: 2px solid red;
+    width: 100%;
+    height: 13dvh;
+    font-size: 12dvh;
+    letter-spacing: 3px;
+    text-shadow:
+    5px 5px 14px rgba(0, 0, 0, 0.4);
+
+}
+
 
 
 .homeTextStyle {
@@ -80,6 +133,19 @@
     padding: 0 0 8dvh 8dvw;
     word-wrap: break-word;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
