--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -1,6 +1,6 @@
 .galleryPage {
     /* custom variables for after shading */
-    --color-shadeOne: #9300c9;
+    --shade-gallery: #9300c9;
 
     border: 2px solid blue;
     background: radial-gradient(circle, #929292 0%, #707070 40%, #0a0a0a 100%);
@@ -24,10 +24,10 @@
     height: 100%;
     /* ! unable to transition gradients */
     /* background-image:
-        linear-gradient(120deg, var(--color-shadeOne) 20%, var(--color-shadeTwo) 60%),
+        linear-gradient(120deg, var(--shade-gallery) 20%, var(--color-shadeTwo) 60%),
         url('../../images/texture.png'); */
     /* settled for solid color */
-    background-color: var(--color-shadeOne);
+    background-color: var(--shade-gallery);
     background-image: url('../../images/texture.png');
 
     /* background-position: center; */
