--- a/src/pages/groupDisplay/groupDisplay.css
+++ b/src/pages/groupDisplay/groupDisplay.css
@@ -1,16 +1,14 @@
 .groupDisplay {
+
+    --shade-group: #9300c9;
     border: 2px solid blue;
     height: 100dvh;
     width: 100dvw;
     overflow: scroll;
-
-    /* display: flex; */
-    /* flex-flow: row nowrap; */
-    /* position: relative; */
     background: radial-gradient(circle, #929292 0%, #707070 40%, #0a0a0a 100%);
 
-    
 }
+
 .groupDisplay::after {
     content: "";
     position: absolute;
@@ -18,20 +16,15 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background:
-        /* Combine layers */
-        /* linear-gradient(120deg, rgba(255, 0, 150, 0.25) 20%, rgba(0, 200, 255, 0.25) 60%), */
-        /* linear-gradient(120deg, rgba(13, 0, 255, 0.25) 20%, rgba(255, 255, 0, 0.25) 60%), */
-        url('../../images/texture.png');
-    /* background-position: center; */
+
+    background-color: var(--shade-group);
+    background-image: url('../../images/texture.png');
     background-size: cover;
-    /* Blend gradient and texture */
     background-blend-mode: overlay, normal;
-    /* Blend with the underlying content */
     mix-blend-mode: overlay;
     pointer-events: none;
-    /* non-interactive */
     opacity: 0.5;
+
 }
 
 
@@ -62,4 +55,3 @@
     justify-content: center;
     align-items: center;
 }
-
