--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -29,11 +29,11 @@
 
 .stickyFooter {
     border: 2px solid lime;
-    height: 70dvh;
+    height: 50dvh;
     width: 100%;
     position: sticky;
     bottom: 0;
-    padding: 2rem;
+    padding: 1.5rem;
 
 
     display: flex;
@@ -54,20 +54,10 @@
 
 }
 
-.footerContent {
-    border: 2px solid yellow;
-    flex: 1;
-    width: 60%;
-
-    display: flex;
-    flex-flow: row nowrap;
-}
-
-.footerLinks,
-.footerAbout {
+.footerLinks {
     border: 2px solid grey;
     font-family: ringbearer;
-    font-size: 26px;
+    font-size: 22px;
     letter-spacing: 3px;
     height: 100%;
     width: 100%;
@@ -76,15 +66,10 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
-    /* justify-content: center; */
-    align-items: center;
-    gap: 8px;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 6px;
 
-}
-
-.footerViews {
-    border: 2px solid purple;
-    flex: 1;
 }
 
 
