--- a/src/pages/groupDisplay/groupDisplay.css
+++ b/src/pages/groupDisplay/groupDisplay.css
@@ -3,8 +3,13 @@
     border: 2px solid blue;
     height: 100dvh;
     width: 100dvw;
-    overflow: scroll;
+    overflow: auto;
     background: radial-gradient(circle, #929292 0%, #707070 40%, #0a0a0a 100%);
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .groupDisplay::after {
@@ -26,36 +31,46 @@
 
 .scrollDisplay {
     border: 2px solid magenta;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-
 }
 
-.stickyGroup {
-    border: 2px solid gold;
+.groupTitle {
+    border: 2px solid white;
     width: 100%;
-    height: 20dvh;
-    height: 18dvh;
     position: sticky;
     top: 0;
-    background-color: #ffffff66;
-
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+    font-size: 10dvw;
+    text-align: right;
 }
 
 
 .artBox {
     border: 2px solid lime;
-    width: 350px;
-    height: 66dvh;
+    width: 375px;
+    height: 375px;
     display: flex;
+    flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    margin-top: 4dvh;
+    position: relative;
+
+}
+
+
+.artBox:first-child {
+    border: 2px solid skyblue;
+    margin-top: 12dvh;
+}
+
+.artImage {
+    border: 2px solid purple;
+    width: 100%;
+    height: 100%;
+}
+
+.artTitle {
+    border: 2px solid white;
+    position: absolute;
+    bottom: 5%;
+    left: 10%;
+    font-size: 26px;
 }
