--- a/src/pages/groupDisplay/groupDisplay.css
+++ b/src/pages/groupDisplay/groupDisplay.css
@@ -9,6 +9,9 @@
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
+
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
 }
 
 .groupDisplay::after {
@@ -40,28 +43,32 @@
 
 
 .artBox {
-    /* border: 2px solid lime; */
+    border: 2px solid lime;
     width: 375px;
     height: 425px;
+    width: 100dvw;
+    height: 100dvh;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
     position: relative;
 
+    /* scroll-snap-align: start; */
+    scroll-snap-align: center;
 }
 
 .artImage {
-    /* border: 2px solid purple; */
-    width: 100%;
-    height: 100%;
+    border: 2px solid purple;
+    width: 95%;
+    height: 70%;
     object-fit: contain;
 }
 
 .artTitle {
     /* border: 2px solid white; */
     position: absolute;
-    bottom: 5%;
+    bottom: 20%;
     left: 10%;
     font-size: 30px;
     color: lime;
