--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -56,6 +56,7 @@
     object-fit: cover; */
 }
 
+
 .galleryVeiwControl {
     border: 2px solid purple;
     height: 100%;
@@ -220,13 +221,15 @@
 
 
 
+
+
 /* screens greater than 430 */
 
 @media (min-width: 430px) {
 
     .galleryPage {
         border: 2px solid magenta;
-        /* padding: 5dvh 5dvw; */
+        padding: 3dvh;
 
     }
 
@@ -240,8 +243,18 @@
         display: flex;
         flex-grow: 1;
         height: 100%;
-        /* padding: 4dvh; */
+        /* padding: 20px; */
         z-index: 10;
+
+        /* NEW CODE */
+        overflow: auto;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+
+        scroll-snap-type: y mandatory;
+        scroll-behavior: smooth;
     }
 
     .bigImage {
@@ -253,6 +266,49 @@
         object-fit: cover;
     }
 
+    .largeArtBox {
+        border: 2px solid gold;
+        width: 250px;
+        height: 250px;
+        position: relative;
+        scroll-snap-align: center;
+    }
+    /* .largeArtBox:first-child {
+        border: 2px solid skyblue;
+        margin-top: 10dvh;
+    } */
+    .largeArtTitle {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+    .largeArtImage {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
 
+    
+}
+
+
+
+.mobileView {
+    /* display: flex; */
+}
+.largeView {
+    display: none;
+}
+
+@media (min-width: 767px) {
+
+    .mobileView {
+        display: none;
+    
+    }
+    .largeView {
+        display: flex;
+    }
+    
 
 }
