--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -237,13 +237,11 @@
         width: 430px;
     }
 
-
     .bigImageSlider {
         border: 2px solid red;
         display: flex;
         flex-grow: 1;
         height: 100%;
-        /* padding: 20px; */
         z-index: 10;
 
         /* NEW CODE */
@@ -252,15 +250,20 @@
         justify-content: center;
         align-items: center;
         gap: 20px;
-
         scroll-snap-type: y mandatory;
         scroll-behavior: smooth;
     }
 
+    .bigImageWrapper {
+        border: 2px solid yellow;
+        width: 100%;
+        height: 100%;
+
+    }
     .bigImage {
         /* border: 2px solid yellow; */
         /* display: none; */
-        display: flex;
+        /* display: flex; */
         width: 100%;
         height: 100%;
         object-fit: cover;
