--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -230,7 +230,6 @@
     .galleryPage {
         border: 2px solid magenta;
         padding: 3dvh;
-
     }
 
     .galleryViewControl {
@@ -250,23 +249,8 @@
         justify-content: center;
         align-items: center;
         gap: 20px;
-        scroll-snap-type: y mandatory;
-        scroll-behavior: smooth;
-    }
-
-    .bigImageWrapper {
-        border: 2px solid yellow;
-        width: 100%;
-        height: 100%;
-
-    }
-    .bigImage {
-        /* border: 2px solid yellow; */
-        /* display: none; */
-        /* display: flex; */
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        /* scroll-snap-type: y mandatory;
+        scroll-behavior: smooth; */
     }
 
     .largeArtBox {
@@ -274,12 +258,9 @@
         width: 250px;
         height: 250px;
         position: relative;
-        scroll-snap-align: center;
+        /* scroll-snap-align: center; */
     }
-    /* .largeArtBox:first-child {
-        border: 2px solid skyblue;
-        margin-top: 10dvh;
-    } */
+
     .largeArtTitle {
         position: absolute;
         bottom: 0;
