--- a/src/pages/commissionPage/commissionPage.css
+++ b/src/pages/commissionPage/commissionPage.css
@@ -4,30 +4,41 @@
     height: 100dvh;
     overflow: auto;
     position: relative;
-
-    background-color: #140000ee;
     color: white;
-
-    background-image: url('../../images/texture.png');
-    background-size: cover;
-    background-blend-mode: overlay, normal;
-    mix-blend-mode: overlay;
-
-
 }
 
-
-.comSection {
-    border: 2px solid red;
+.scrollCommission {
+    border: 2px solid black;
     width: 100%;
-    height: 100dvh;
-    position: sticky;
-    top: 0;
+    height: 500dvh;
 }
-
 
 .ringBox {
     border: 2px solid yellow;
     width: 100dvw;
     height: 100dvh;
+    position: sticky;
+    top: 0;
+
+    /* background-color: transparent; */
+    background-image: url('../../images/oneRing.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+
 }
+
+.comSection {
+    border: 2px solid red;
+    width: 100%;
+    height: 100dvh;
+    position: fixed;
+    top: 0;
+    pointer-events: none;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
