--- a/src/pages/commissionPage/commissionPage.css
+++ b/src/pages/commissionPage/commissionPage.css
@@ -10,7 +10,7 @@
 .scrollCommission {
     border: 2px solid black;
     width: 100%;
-    height: 500dvh;
+    height: 750dvh;
 }
 
 .ringBox {
@@ -32,9 +32,10 @@
     border: 2px solid red;
     width: 100%;
     height: 100dvh;
-    position: fixed;
+
+    position: sticky;
     top: 0;
-    pointer-events: none;
+    /* pointer-events: none; */
 
     display: flex;
     flex-flow: column nowrap;
