--- a/src/pages/commissionPage/commissionPage.css
+++ b/src/pages/commissionPage/commissionPage.css
@@ -5,26 +5,30 @@
     overflow: auto;
     position: relative;
     color: white;
+
+
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+
 }
 
-.scrollCommission {
-    border: 2px solid black;
-    width: 100%;
-    height: 750dvh;
-}
 
 .ringBox {
     border: 2px solid yellow;
     width: 100dvw;
     height: 100dvh;
-    position: sticky;
+    position: fixed;
+    z-index: 0;
     top: 0;
+    pointer-events: none;
 
     /* background-color: transparent; */
     background-image: url('../../images/oneRing.png');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    /* filter: grayscale(10); */
+    opacity: 0.25;
 
 }
 
@@ -32,14 +36,39 @@
     border: 2px solid red;
     width: 100%;
     height: 100dvh;
+    z-index: 100;
+    position: relative;
 
-    position: sticky;
-    top: 0;
+
     /* pointer-events: none; */
 
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+
+    scroll-snap-align: center;
+}
+
+
+
+/* acquire model display box */
+
+.comModels {
+    border: 2px solid white;
+    width: 75%;
+    height: 70%;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.acquireMethod {
+    border: 2px solid blue;
+    width: 100%;
+    height: 15dvh;
+    /* flex: 1; */
 }
 
