--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -219,6 +219,11 @@
     font-size: 2.75dvw;
 }
 
+.slideShowImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 
 
@@ -273,6 +278,7 @@
     }
 
     
+
 }
 
 
