--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -1,94 +1,27 @@
 .homePage {
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     width: 100dvw;
     height: 100dvh;
     display: block;
     position: relative;
     overflow-y: auto;
-}
 
-.homeScrollDiv {
-    border: 2px solid goldenrod;
-    /* position: relative; */
+    scrollbar-width: none;
+    -ms-overflow-style: none; 
+}
+.homePage::-webkit-scrollbar {
+    display: none;
 }
 
 .revealPanel {
-    border: 2px solid magenta;
+    border-bottom: 2px solid black;
     width: 100%;
     height: 100dvh;
     position: relative;
     z-index: 10;
 }
 
-.homeImage {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 0;
-}
-
-.stickyFooter {
-    border: 2px solid lime;
-    height: 50dvh;
-    width: 100%;
-    position: sticky;
-    bottom: 0;
-    padding: 1.5rem;
-
-
-    display: flex;
-    flex-flow: column-reverse nowrap;
-    justify-content: center;
-    align-items: flex-start;
-
-
-    background-color: black;
-    /* background: linear-gradient(150deg, #052900, #737900); */
-    color: white;
-    background-image: 
-    linear-gradient(150deg, #052900aa, #737900aa), /* Gradient layer */
-    url('../../images/mordor.png'); 
-    background-size: contain, contain;
-    background-repeat: no-repeat, no-repeat;
-    background-position: center, bottom;
-
-}
-
-.footerLinks {
-    border: 2px solid grey;
-    font-family: ringbearer;
-    font-size: 22px;
-    letter-spacing: 3px;
-    height: 100%;
-    width: 100%;
-    flex: 1;
-
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 6px;
-
-}
-
-
-
-.SSwelcome {
-    font-family: ringbearer;
-    border: 2px solid red;
-    width: 100%;
-    height: 13dvh;
-    font-size: 12dvh;
-    letter-spacing: 3px;
-    text-shadow:
-    5px 5px 14px rgba(0, 0, 0, 0.4);
-
-}
-
-
-
-.homeTextStyle {
+.SSTextStyle {
     color: #e5e5e5;
     z-index: 10;
     position: absolute;
@@ -97,6 +30,7 @@
     letter-spacing: 3px;
     display: flex;
     flex-flow: column nowrap;
+    transform: translate(-50%, -50%) rotateX(18deg) rotateY(-10deg);
     text-shadow:
         1px 1px 2px rgba(0, 0, 0, 0.8),
         2px 2px 5px rgba(0, 0, 0, 0.7),
@@ -107,220 +41,105 @@
 }
 
 .SStitle {
-    border: 4px solid white;
+    border-top: 3px solid white;
+    border-bottom: 3px solid white;
     font-family: wildGrowth;
-    top: 30%;
+    top: 25%;
     left: 50%;
-    transform: translate(-50%, -50%) rotateX(18deg) rotateY(-10deg);
-    width: 105%;
-    height: 10dvh;
-    font-size: 6vw;
-    padding: 0 0 8dvh 8dvw;
-    word-wrap: break-word;
+    width: 102%;
+    font-size: 12dvw;
+    padding: 2dvh 0 0 8dvw;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.homeImageDisplay {
-    border: 2px solid orangered;
-    width: 100%;
-    height: 100dvh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.homeSection {
-    border: 2px solid orange;
-    width: 100%;
-    position: sticky;
-    top: 0%;
-    background-color: black;
-    /* background: linear-gradient(150deg, #052900, #737900); */
-    color: white;
-
-    background-image: 
-    linear-gradient(150deg, #052900ee, #737900ee), /* Gradient layer */
-    url('../../images/texture1.png'); 
-
-    background-size: cover, cover;
-    background-repeat: no-repeat, no-repeat;
-    /* background-position: center, center; */
-    /* background-color: #0000ff99; */
-    /* background-blend-mode: overlay; */
-
-}
-
-
-.homeSection:nth-child(1) {
-    height: 65dvh;
-    top: 35dvh;
-    margin-top: 100dvh;
-    /* background: linear-gradient(150deg, #560000, #979700); */
-}
-
-.homeSection:nth-child(2) {
-    height: 60dvh;
-    top: 40dvh;
-    /* background: linear-gradient(150deg, #073d00, #a2b000); */
-
-}
-
-.homeSection:nth-child(3) {
-    height: 55dvh;
-    top: 45dvh;
-    /* background: linear-gradient(150deg, #050066, #510062); */
-}
-
-.homeSection:nth-child(4) {
-    height: 50dvh;
-    top: 50dvh;
-}
-
-.homeSection:nth-child(5) {
-    height: 45dvh;
-    top: 55dvh;
-}
-
-
-
-.homeContent {
-    border: 2px solid blue;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100%;
-
-}
-
-.contentTitle {
-    /* border: 2px solid magenta; */
-    /* font-family: wildGrowth; */
-}
-
-
-.contentDisplay {
-    border: 2px solid red;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-
-    position: relative;
-
-}
-
-
-.contentCoolScene {
-    border: 2px solid purple;
-    flex: 1;
-    height: 100%;
-    display: none;
-}
-
-.contentCoolMini {
-    /* border: 2px solid grey; */
-    border-radius: 50%;
-
-    margin: 1rem;
-    margin-right: 3rem;
-    padding: 8px;
-
-    width: 25dvh;
-    height: 25dvh;
-
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
-
-    float: left;
-    shape-outside: circle(50%);
-    /* clip-path: circle(50%); */
-
-    background-color: transparent;
-    backdrop-filter: blur(2px);
-    background-image: linear-gradient(90deg,
-            #ffffff33,
-            #80808033,
-            #ffffff33);
-
-    box-shadow: 0px 0px 10px black;
-
-}
-
-.contentDescription {
-    border: 2px solid gold;
-    display: block;
-    flex-flow: row nowrap;
-    height: 100%;
-    flex: 1;
-    padding-top: 2rem;
-
-}
-
-.contentDescription p {
-    /* margin: 10px; */
-    padding: 1rem;
-    line-height: 1.5;
-    text-align: justify;
-}
-
-
-
-
-
-
-
 
 .scrollAdventure {
     height: 20%;
     width: 75%;
-    font-size: 6vw;
-    top: 40%;
+    font-size: 6dvw;
+    top: 48%;
     left: 50%;
-    transform: translate(-50%, -50%) rotateX(15deg) rotateY(-10deg);
+}
+
+.stickyFooter {
+    border: 2px solid black;
+    height: 50dvh;
+    width: 100%;
+    position: sticky;
+    bottom: 0;
+    padding: 1.5rem;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-start;
+
+    background-color: black;
+    color: white;
+    box-shadow: inset 0px 0px 15px black;
+    background-image: 
+    linear-gradient(150deg, #052900aa, #737900aa),
+    url('../../images/mordor.png'); 
+    background-size: contain, contain;
+    background-repeat: no-repeat, no-repeat;
+    background-position: center, bottom;
+}
+
+.footerLinks {
+    /* border: 2px solid grey; */
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5dvh;
+}
+.footLink {
+    font-family: ringbearer;
+    font-size: 3.25dvh;
+    letter-spacing: 3px;
+    text-decoration: none;
+    color: white;
+    -webkit-text-stroke: 0.5px black; /* Outline thickness and color */
+}
+
+.SSwelcome {
+    font-family: ringbearer;
+    width: 100%;
+    font-size: 8dvh;
+    letter-spacing: 3px;
+    text-shadow: 5px 5px 14px rgba(0, 0, 0, 0.4);
+    text-align: center;
+}
+
+.SStagline {
+    width: 100%;
+    font-size: 2dvh;
+    text-align: center;
+}
+
+
+/* Screens greater than 430px */
+@media (min-width: 430px) {
+    /* .homePage {
+        border: 2px solid red;
+    } */
+
+    .SStitle {
+        /* border: 2px solid red; */
+        font-size: 8dvh;
+    }
+    
+    .scrollAdventure {
+        font-size: 3.5dvh;
+    }
+
+    .footerLinks {
+        padding-left: 12dvw;
+        align-items: flex-start;
+    }
+    
+    
+    
+
+
 }
