--- a/src/components/navigation/navBar.css
+++ b/src/components/navigation/navBar.css
@@ -1,42 +1,61 @@
-.navBar { 
-    border: 1px solid white;
-
-    width: 70%;
-    min-width: 450px;
-    max-width: 650px;
-
-    overflow: hidden;
-
-    height: 60px;
-    border-radius: 50px;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-evenly;
-    align-items: center;
-    position: relative;
-    z-index: 30;
-    background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.5);
+.navBar {
+    display: none;
 }
 
-.navBar a {
-    /* border: 2px solid lime; */
-    z-index: 35;
-    color: white;
-    height: 90%;
-    padding: 0px 10px;
-    mix-blend-mode: difference;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* text-decoration: none; */
-}
 
-.cursor {
-    /* border: 2px solid magenta; */
-    position: absolute;
-    height: 80%;
-    background-color: black;
-    border-radius: 50px;
-    /* z-index: 30; */
+@media (min-width: 430px) {
+
+    .navBar {
+        /* border: 1px solid white; */
+
+        width: 70%;
+        min-width: 430px;
+        max-width: 650px;
+
+        overflow: hidden;
+
+        height: 60px;
+        border-radius: 50px;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-evenly;
+        align-items: center;
+        position: absolute;
+        top: 4dvh;
+        left: 50%;
+        z-index: 30;
+        transform: translateX(-50%);
+        box-shadow: inset 0px 2px 10px rgba(0, 0, 0, 0.6);
+
+        /* background-color: transparent;
+    backdrop-filter: blur(1px);
+    background-image: linear-gradient(90deg,
+        #ffffff44,
+        #80808044,
+        #ffffff44);   */
+    }
+
+    .navBar a {
+        /* border: 2px solid lime; */
+        z-index: 35;
+        height: 90%;
+        padding: 0px 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+
+        /* ** needed for color shifts based on background */
+        color: white;
+        mix-blend-mode: difference;
+    }
+
+    .cursor {
+        /* border: 2px solid magenta; */
+        position: absolute;
+        height: 80%;
+        background-color: #000000aa;
+        border-radius: 50px;
+    }
+
 }
