--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -1,8 +1,8 @@
 .galleryPage {
     /* custom variables for after shading */
-    --shade-gallery: #9300c9;
+    --shade-gallery: #00000055;
 
-    border: 2px solid blue;
+    /* border: 2px solid #008225; */
     background: radial-gradient(circle, #929292 0%, #707070 40%, #0a0a0a 100%);
     width: 100dvw;
     height: 100dvh;
@@ -28,6 +28,7 @@
         url('../../images/texture.png'); */
     /* settled for solid color */
     background-color: var(--shade-gallery);
+    /* background-color: #000dbe88; */
     background-image: url('../../images/texture.png');
 
     /* background-position: center; */
@@ -38,7 +39,7 @@
     mix-blend-mode: overlay;
     pointer-events: none;
     /* non-interactive */
-    opacity: 0.5;
+    opacity: 0.4;
     transition: background-color 0.75s ease-in-out;
 }
 
@@ -58,7 +59,7 @@
 
 
 .galleryVeiwControl {
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     height: 100%;
     width: 100%;
     min-width: 375px;
@@ -71,26 +72,29 @@
 }
 
 .displayIcon {
-    border: 2px solid white;
-    width: 45dvh;
-    height: 45dvh;
+    /* border: 2px solid white; */
+    width: 50dvh;
+    height: 50dvh;
     position: absolute;
-    top: -10%;
+    top: -5%;
     left: -20%;
+    object-fit: contain;
+    filter: opacity(25%);
 }
 
 .sectionButtons {
-    border: 2px solid goldenrod;
+    /* border: 2px solid goldenrod; */
     width: 100%;
     height: 15dvh;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
+    gap: 25px;
 }
 
 .contentContainer {
-    border: 2px solid pink;
+    /* border: 2px solid pink; */
     flex: 1;
     width: 95%;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0) 80%);
@@ -103,48 +107,55 @@
 }
 
 .displayButtons {
-    border: 2px solid gold;
+    /* border: 2px solid greenyellow; */
     position: absolute;
-    top: 10%;
+    top: 7%;
     right: 5%;
     width: 25%;
-    height: 32%;
+    height: 35%;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     z-index: 90;
 }
 
 .displayContent {
-    border: 2px solid lime;
+    /* border: 2px solid lime; */
     width: 100%;
-    height: 55%;
+    height: 52%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
 }
 
 .displayImage {
-    border: 2px solid lime;
+    /* border: 2px solid lime; */
     width: 30dvh;
     height: 30dvh;
     object-fit: contain;
     position: absolute;
-    top: 3%;
-    left: 3%;
+    top: 5%;
+    left: 5%;
     filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.75));
 }
 
 .displayTitle {
-    border: 2px solid gold;
+    /* border: 2px solid gold; */
     width: 85%;
     font-size: 5dvh;
     font-weight: 700;
     z-index: 5;
     text-align: center;
+    color: whitesmoke;
+    text-shadow: 
+        1px 1px 0 black, 
+        2px 2px 0 black, 
+        3px 3px 0 black, 
+        4px 4px 0 rgba(0, 0, 0, 0.5);
+
 }
 
 .displayLine {
@@ -154,7 +165,7 @@
 }
 
 .displayDescription {
-    border: 2px solid gold;
+    /* border: 2px solid gold; */
     /* height: 20%; */
     width: 80%;
     text-align: center;
@@ -177,7 +188,7 @@
     border: 1px solid #ffffff88;
     cursor: pointer;
     position: absolute;
-    bottom: 5%;
+    bottom: 7%;
 }
 
 
@@ -224,6 +235,14 @@
     height: 100%;
     object-fit: cover;
 }
+
+
+
+
+
+
+
+
 
 
 
@@ -283,12 +302,14 @@
 
 
 
+
 .mobileView {
     /* display: flex; */
 }
 .largeView {
     display: none;
 }
+
 
 @media (min-width: 767px) {
 
