--- a/src/components/contactView/contactView.css
+++ b/src/components/contactView/contactView.css
@@ -1,5 +1,4 @@
 .contactView {
-  /* custom variables for after shading */
   border: 2px solid red;
   width: 100%;
   height: 100%;
@@ -10,12 +9,11 @@
   background: radial-gradient(circle, #929292 0%, #707070 40%, #0a0a0a 100%);
   overflow: hidden;
   color: white;
-
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 6dvh;
+  padding-top: 13dvh;
   gap: 5dvh;
 
 }
@@ -59,6 +57,16 @@
   mix-blend-mode: overlay;
 }
 
+.contactReturn {
+  /* border: 2px solid white; */
+  position: absolute;
+  top: 3%;
+  right: 5%;
+  z-index: 1;
+  font-size: 60px;
+}
+
+
 .contactForm {
   /* border: 2px solid white; */
   width: 100%;
@@ -71,8 +79,19 @@
   gap: 2dvh;
 }
 
+.submitContact {
+  /* border: 2px solid white; */
+  border: none;
+  border-radius: 10px;
+  box-shadow: -2px 2px 5px black;
+  width: 8rem;
+  height: 2.5rem;
+
+}
 
 
+
+/* input / textarea css */
 .input-group {
   /* border: 2px solid blue; */
   position: relative;
@@ -83,7 +102,7 @@
   width: 100%;
   padding: 0.8rem 0;
   font-size: 1.15rem;
-  color: rgb(230, 254, 16);
+  color: rgb(246, 255, 169);
   border: none;
   outline: none;
   background-color: transparent;
@@ -100,7 +119,6 @@
   transform: translateY(-50%);
   transition: 0.3s ease-in-out;
 }
-
 
 .input-group input:focus+label,
 .input-group input:valid+label {
@@ -120,7 +138,6 @@
   position: absolute;
   left: 0;
   bottom: 0;
-
   transform: scale(0);
   transform-origin: left;
   transition: 0.5s ease-in-out;
@@ -131,8 +148,6 @@
   transform: scaleX(1);
 }
 
-
-
 .realTextArea {
   width: 0;
   height: 0;
@@ -142,9 +157,8 @@
 .fakeTextArea {
   border: 1px solid white;
   width: 90%;
-  height: 15dvh;
+  height: 115px;
   padding: 0.5rem;
-
 }
 
 .realTextArea:focus+.fakeTextArea {
@@ -164,69 +178,13 @@
 
 
 
-.submitContact,
-.contactReturn {
-  /* border: 2px solid white; */
-  border: none;
-  border-radius: 10px;
-  box-shadow: -2px 2px 5px black;
-  width: 8rem;
-  height: 2.5rem;
+@media (min-width: 430px) {
+  .contactView {
+    width: 420px;
+  }
 
+  .fakeTextArea {
+    /* height: 16dvh; */
+  }
+  
 }
-
-
-.contactReturn {
-  z-index: 1;
-}
-
-
-
-/* this is before major changes in the button */
-
-.slideButton {
-  position: relative;
-  cursor: pointer;
-  border: none;
-  border-radius: 10px;
-  box-shadow: -1px 1px 8px black;
-  text-align: center;
-  overflow: hidden;
-  font-weight: 700;
-  background-color: rgb(51, 51, 51);
-  background-color: transparent;
-  padding: 1rem 4rem;
-  /* transition: all 0.5s ease-in-out 0s; */
-  color: rgb(255, 255, 255) !important;
-}
-
-.slideButton span {
-  position: relative;
-  z-index: 1;
-}
-
-.slideButton::after {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 13rem;
-  height: 13rem;
-  background: teal;
-  transition: all 0.66s ease-in-out 0s;
-  transform: translate(-100%, -38.5%) rotate(-45deg);
-
-}
-.slideButton:hover::after {
-  transform: translate(0%, -38.5%) rotate(-45deg);
-}
-
-
-
-
-
-
-
-
-
-
