--- a/src/components/miniDisplay/miniDisplay.css
+++ b/src/components/miniDisplay/miniDisplay.css
@@ -1,14 +1,12 @@
 .miniDisplay {
-    border: 3px solid mediumpurple;
+    /* border: 3px solid mediumpurple; */
     width: 100%;
     height: 100%;
     overflow: auto;
-    /* padding-top: 16dvh; */
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-items: flex-start;
-    /* gap: 15px; */
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
     z-index: 50;
@@ -16,7 +14,7 @@
 
 
 .artBox {
-    border: 2px solid lime;
+    /* border: 2px solid lime; */
     width: 100dvw;
     height: 100dvh;
     display: flex;
@@ -47,7 +45,6 @@
 
 
 
-
 @media (min-width: 430px) {
 
     .miniDisplay {
@@ -70,7 +67,7 @@
     }
 
     .artTitle {
-        border: 2px solid white;
+        /* border: 2px solid white; */
         position: absolute;
         bottom: 5%;
         left: 5%;
