--- a/src/components/navigation/navBar.css
+++ b/src/components/navigation/navBar.css
@@ -10,9 +10,7 @@
         width: 70%;
         min-width: 430px;
         max-width: 650px;
-
         overflow: hidden;
-
         height: 60px;
         border-radius: 50px;
         display: flex;
@@ -25,16 +23,9 @@
         z-index: 30;
         transform: translateX(-50%);
         box-shadow: inset 0px 2px 10px rgba(0, 0, 0, 0.6);
-
-        /* background-color: transparent;
-    backdrop-filter: blur(1px);
-    background-image: linear-gradient(90deg,
-        #ffffff44,
-        #80808044,
-        #ffffff44);   */
     }
 
-    .navBar a {
+    .motionTab {
         /* border: 2px solid lime; */
         z-index: 35;
         height: 90%;
@@ -43,7 +34,6 @@
         justify-content: center;
         align-items: center;
         text-decoration: none;
-
         /* ** needed for color shifts based on background */
         color: white;
         mix-blend-mode: difference;
