--- a/src/App.css
+++ b/src/App.css
@@ -114,3 +114,64 @@ html {
   color: white;
   border: 1px solid gold;
 }
+
+
+
+
+
+
+  /* TRACK BUTTON */
+
+  .trackButton {
+    border: none;
+    width: 100%;
+    height: 100%;
+    color: #FFF;
+    background-color: transparent;
+    transition: all 0.3s;
+    position: relative;
+    font-size: inherit;
+  }
+  .trackButton span {
+    transition: all 0.3s;
+  }
+  .trackButton::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.3s;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-top-color: rgba(255,255,255,0.5);
+    border-bottom-color: rgba(255,255,255,0.5);
+    transform: scale(0.1, 1);
+  }
+  .trackButton:hover span {
+    letter-spacing: 5px;
+  }
+  .trackButton:hover::before {
+    opacity: 1; 
+    transform: scale(1, 1); 
+  }
+  .trackButton::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: all 0.3s;
+    background-color: rgba(255,255,255,0.1);
+  }
+  .trackButton:hover::after {
+    opacity: 0; 
+    transform: scale(0.1, 1);
+  }
