--- a/src/components/contactView/contactView.css
+++ b/src/components/contactView/contactView.css
@@ -18,12 +18,6 @@
 
 }
 
-.contactView p {
-  /* border: 2px solid white; */
-  font-size: 2rem;
-  font-family: wildGrowth;
-}
-
 .contactView::after {
   content: "";
   position: absolute;
@@ -75,9 +69,16 @@
   justify-content: center;
   align-items: center;
   z-index: 100;
-  /* font-size: 3dvh; */
-  gap: 2dvh;
+  gap: 2.5dvh;
+
 }
+
+.contactForm p {
+  /* border: 2px solid white; */
+  font-family: wildGrowth;
+  font-size: 2rem;
+}
+
 
 
 
@@ -166,22 +167,11 @@
   width: 0.3em;
 }
 
-.sentSuccess {
-  border: 2px solid lime;
-  background-color: #000000ab;
-  position: absolute;
-  top: 0;
-  z-index: 50;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
 
 
 @media (min-width: 430px) {
   .contactView {
     width: 420px;
   }
-  
+
 }
